--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "autoprefixer": "^10.4.15",
+    "daisyui": "^3.8.0",
     "pdfjs-dist": "^3.4.120",
     "pinia": "^3.0.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
