--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/vue": "^1.7.23",
     "autoprefixer": "^10.4.15",
     "daisyui": "^3.8.0",
+    "heic-to": "^1.1.12",
     "pdfjs-dist": "^3.4.120",
     "pinia": "^3.0.1",
     "postcss": "^8.4.31",
