--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "server": "node api/server.js",
+    "dev:all": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "autoprefixer": "^10.4.15",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "daisyui": "^3.8.0",
+    "express": "^5.1.0",
+    "file-type": "^20.5.0",
     "heic-to": "^1.1.12",
+    "multer": "^1.4.5-lts.2",
+    "node-fetch": "^3.3.2",
     "pdfjs-dist": "^3.4.120",
     "pinia": "^3.0.1",
     "postcss": "^8.4.31",
@@ -25,6 +33,7 @@
     "@eslint/js": "^9.22.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "concurrently": "^8.2.2",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
