--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "express": "^5.1.0",
     "file-type": "^20.5.0",
     "heic-to": "^1.1.12",
+    "highlight.js": "^11.11.1",
+    "markdown-it": "^14.1.0",
+    "markdown-it-highlightjs": "^4.2.0",
+    "marked": "^15.0.11",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
     "pdfjs-dist": "^3.4.120",
