--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "autoprefixer": "^10.4.15",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "daisyui": "^3.8.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "file-type": "^20.5.0",
     "heic-to": "^1.1.12",
@@ -25,13 +27,15 @@
     "markdown-it": "^14.1.0",
     "markdown-it-highlightjs": "^4.2.0",
     "marked": "^15.0.11",
+    "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
     "pdfjs-dist": "^3.4.120",
     "pinia": "^3.0.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
