加入了nginx服务器来负责负载均衡和反向代理

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,21 +1,109 @@
-user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+#user nginx;  # 在Mac开发环境中不需要指定用户
+worker_processes 1;
+#error_log /var/log/nginx/error.log warn;  # 使用相对路径
+error_log logs/error.log;
+#pid /var/run/nginx.pid;  # 使用相对路径
+pid logs/nginx.pid;
 
 events {
     worker_connections 1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
+    # 基本MIME类型定义
+    types {
+        text/html                                        html htm shtml;
+        text/css                                         css;
+        text/xml                                         xml;
+        image/gif                                        gif;
+        image/jpeg                                       jpeg jpg;
+        application/javascript                           js;
+        application/atom+xml                             atom;
+        application/rss+xml                              rss;
+
+        text/mathml                                      mml;
+        text/plain                                       txt;
+        text/vnd.sun.j2me.app-descriptor                 jad;
+        text/vnd.wap.wml                                 wml;
+        text/x-component                                 htc;
+
+        image/png                                        png;
+        image/tiff                                       tif tiff;
+        image/vnd.wap.wbmp                               wbmp;
+        image/x-icon                                     ico;
+        image/x-jng                                      jng;
+        image/x-ms-bmp                                   bmp;
+        image/svg+xml                                    svg svgz;
+        image/webp                                       webp;
+
+        application/font-woff                            woff;
+        application/java-archive                         jar war ear;
+        application/json                                 json;
+        application/mac-binhex40                         hqx;
+        application/msword                               doc;
+        application/pdf                                  pdf;
+        application/postscript                           ps eps ai;
+        application/rtf                                  rtf;
+        application/vnd.apple.mpegurl                    m3u8;
+        application/vnd.ms-excel                         xls;
+        application/vnd.ms-fontobject                    eot;
+        application/vnd.ms-powerpoint                    ppt;
+        application/vnd.wap.wmlc                         wmlc;
+        application/vnd.google-earth.kml+xml             kml;
+        application/vnd.google-earth.kmz                 kmz;
+        application/x-7z-compressed                      7z;
+        application/x-cocoa                              cco;
+        application/x-java-archive-diff                  jardiff;
+        application/x-java-jnlp-file                     jnlp;
+        application/x-makeself                           run;
+        application/x-perl                               pl pm;
+        application/x-pilot                              prc pdb;
+        application/x-rar-compressed                     rar;
+        application/x-redhat-package-manager             rpm;
+        application/x-sea                                sea;
+        application/x-shockwave-flash                    swf;
+        application/x-stuffit                            sit;
+        application/x-tcl                                tcl tk;
+        application/x-x509-ca-cert                       der pem crt;
+        application/x-xpinstall                          xpi;
+        application/xhtml+xml                            xhtml;
+        application/xspf+xml                             xspf;
+        application/zip                                  zip;
+
+        application/octet-stream                         bin exe dll;
+        application/octet-stream                         deb;
+        application/octet-stream                         dmg;
+        application/octet-stream                         iso img;
+        application/octet-stream                         msi msp msm;
+
+        audio/midi                                       mid midi kar;
+        audio/mpeg                                       mp3;
+        audio/ogg                                        ogg;
+        audio/x-m4a                                      m4a;
+        audio/x-realaudio                                ra;
+
+        video/3gpp                                       3gpp 3gp;
+        video/mp2t                                       ts;
+        video/mp4                                        mp4;
+        video/mpeg                                       mpeg mpg;
+        video/quicktime                                  mov;
+        video/webm                                       webm;
+        video/x-flv                                      flv;
+        video/x-m4v                                      m4v;
+        video/x-mng                                      mng;
+        video/x-ms-asf                                   asx asf;
+        video/x-ms-wmv                                   wmv;
+        video/x-msvideo                                  avi;
+    }
+    
     default_type application/octet-stream;
     
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                      '$status $body_bytes_sent "$http_referer" '
                      '"$http_user_agent" "$http_x_forwarded_for"';
     
-    access_log /var/log/nginx/access.log main;
+    #access_log /var/log/nginx/access.log main;  # 使用相对路径
+    access_log logs/access.log main;
     
     sendfile on;
     tcp_nopush on;
@@ -32,37 +120,29 @@ http {
     gzip_http_version 1.1;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     
-    # HTTP 服务器配置
+    # 开发环境配置
     server {
-        listen 80;
+        listen 8000;  # 更改为8000端口
         server_name localhost;
         
-        # 重定向 HTTP 到 HTTPS
-        return 301 https://$host$request_uri;
-    }
-    
-    # HTTPS 服务器配置
-    server {
-        listen 443 ssl;
-        server_name localhost;
+        # 开发环境可以直接提供HTTP服务
+        # 如果需要HTTPS，取消下面注释并注释掉root行
+        # return 301 https://$host$request_uri;
         
-        # SSL 证书配置
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
-        
-        # 前端应用
+        # 前端应用 - 代理到开发服务器
         location / {
-            root /usr/share/nginx/html;  # 前端静态文件目录
-            try_files $uri $uri/ /index.html;
-            index index.html;
+            proxy_pass http://localhost:8082;  # 前端开发服务器
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_cache_bypass $http_upgrade;
         }
         
         # 后端 API
         location /api/ {
-            proxy_pass http://backend:3000;  # 后端服务地址
+            proxy_pass http://localhost:3000;  # 后端服务地址
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -72,12 +152,42 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
         }
+    }
+    
+    # HTTPS 服务器配置 (可选，开发环境可能不需要)
+    server {
+        listen 8443 ssl;  # 使用8443端口避免权限问题
+        server_name localhost;
         
-        # 静态资源缓存
-        location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-            root /usr/share/nginx/html;
-            expires 30d;
-            add_header Cache-Control "public, no-transform";
+        # SSL 证书配置
+        ssl_certificate ssl/cert.pem;  # 相对于工作目录的路径
+        ssl_certificate_key ssl/key.pem;  # 相对于工作目录的路径
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+        
+        # 前端应用 - 代理到开发服务器
+        location / {
+            proxy_pass http://localhost:8082;  # 前端开发服务器
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_cache_bypass $http_upgrade;
+        }
+        
+        # 后端 API
+        location /api/ {
+            proxy_pass http://localhost:3000;  # 本地后端服务地址
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 } 
