--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,5 @@
 #user nginx;  # 在Mac开发环境中不需要指定用户
+user patrick staff;  # 使用patrick用户运行Nginx
 worker_processes 1;
 #error_log /var/log/nginx/error.log warn;  # 使用相对路径
 error_log logs/error.log;
@@ -10,93 +11,29 @@ events {
 }
 
 http {
-    # 基本MIME类型定义
+    # 设置客户端请求体大小限制为25MB
+    client_max_body_size 25M;
+    
+    # 直接定义常用的MIME类型
     types {
-        text/html                                        html htm shtml;
-        text/css                                         css;
-        text/xml                                         xml;
-        image/gif                                        gif;
-        image/jpeg                                       jpeg jpg;
-        application/javascript                           js;
-        application/atom+xml                             atom;
-        application/rss+xml                              rss;
-
-        text/mathml                                      mml;
-        text/plain                                       txt;
-        text/vnd.sun.j2me.app-descriptor                 jad;
-        text/vnd.wap.wml                                 wml;
-        text/x-component                                 htc;
-
-        image/png                                        png;
-        image/tiff                                       tif tiff;
-        image/vnd.wap.wbmp                               wbmp;
-        image/x-icon                                     ico;
-        image/x-jng                                      jng;
-        image/x-ms-bmp                                   bmp;
-        image/svg+xml                                    svg svgz;
-        image/webp                                       webp;
-
-        application/font-woff                            woff;
-        application/java-archive                         jar war ear;
-        application/json                                 json;
-        application/mac-binhex40                         hqx;
-        application/msword                               doc;
-        application/pdf                                  pdf;
-        application/postscript                           ps eps ai;
-        application/rtf                                  rtf;
-        application/vnd.apple.mpegurl                    m3u8;
-        application/vnd.ms-excel                         xls;
-        application/vnd.ms-fontobject                    eot;
-        application/vnd.ms-powerpoint                    ppt;
-        application/vnd.wap.wmlc                         wmlc;
-        application/vnd.google-earth.kml+xml             kml;
-        application/vnd.google-earth.kmz                 kmz;
-        application/x-7z-compressed                      7z;
-        application/x-cocoa                              cco;
-        application/x-java-archive-diff                  jardiff;
-        application/x-java-jnlp-file                     jnlp;
-        application/x-makeself                           run;
-        application/x-perl                               pl pm;
-        application/x-pilot                              prc pdb;
-        application/x-rar-compressed                     rar;
-        application/x-redhat-package-manager             rpm;
-        application/x-sea                                sea;
-        application/x-shockwave-flash                    swf;
-        application/x-stuffit                            sit;
-        application/x-tcl                                tcl tk;
-        application/x-x509-ca-cert                       der pem crt;
-        application/x-xpinstall                          xpi;
-        application/xhtml+xml                            xhtml;
-        application/xspf+xml                             xspf;
-        application/zip                                  zip;
-
-        application/octet-stream                         bin exe dll;
-        application/octet-stream                         deb;
-        application/octet-stream                         dmg;
-        application/octet-stream                         iso img;
-        application/octet-stream                         msi msp msm;
-
-        audio/midi                                       mid midi kar;
-        audio/mpeg                                       mp3;
-        audio/ogg                                        ogg;
-        audio/x-m4a                                      m4a;
-        audio/x-realaudio                                ra;
-
-        video/3gpp                                       3gpp 3gp;
-        video/mp2t                                       ts;
-        video/mp4                                        mp4;
-        video/mpeg                                       mpeg mpg;
-        video/quicktime                                  mov;
-        video/webm                                       webm;
-        video/x-flv                                      flv;
-        video/x-m4v                                      m4v;
-        video/x-mng                                      mng;
-        video/x-ms-asf                                   asx asf;
-        video/x-ms-wmv                                   wmv;
-        video/x-msvideo                                  avi;
+        text/html                             html htm shtml;
+        text/css                              css;
+        text/xml                              xml;
+        text/javascript                       js;
+        image/gif                             gif;
+        image/jpeg                            jpeg jpg;
+        image/png                             png;
+        image/svg+xml                         svg svgz;
+        image/webp                            webp;
+        application/json                      json;
+        application/pdf                       pdf;
+        application/zip                       zip;
+        audio/mpeg                            mp3;
+        video/mp4                             mp4;
+        video/webm                            webm;
     }
     
-    default_type application/octet-stream;
+    default_type  application/octet-stream;
     
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                      '$status $body_bytes_sent "$http_referer" '
@@ -122,22 +59,14 @@ http {
     
     # 开发环境配置
     server {
-        listen 8000;  # 更改为8000端口
+        listen 8080;  # 使用8080端口
         server_name localhost;
         
-        # 开发环境可以直接提供HTTP服务
-        # 如果需要HTTPS，取消下面注释并注释掉root行
-        # return 301 https://$host$request_uri;
-        
-        # 前端应用 - 代理到开发服务器
+        # 静态文件服务 - 支持SPA路由
         location / {
-            proxy_pass http://localhost:8082;  # 前端开发服务器
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_cache_bypass $http_upgrade;
+            root /Users/patrick/Documents/应用开发/ocr-vue-app/frontend/dist;
+            index index.html;
+            try_files $uri $uri/ /index.html;  # 关键配置：支持HTML5 History模式路由
         }
         
         # 后端 API
@@ -159,22 +88,30 @@ http {
         listen 8443 ssl;  # 使用8443端口避免权限问题
         server_name localhost;
         
-        # SSL 证书配置
-        ssl_certificate ssl/cert.pem;  # 相对于工作目录的路径
-        ssl_certificate_key ssl/key.pem;  # 相对于工作目录的路径
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
+        # SSL 证书配置 - 使用绝对路径
+        ssl_certificate /Users/patrick/Documents/应用开发/ocr-vue-app/ssl/localhost+2.pem;
+        ssl_certificate_key /Users/patrick/Documents/应用开发/ocr-vue-app/ssl/localhost+2-key.pem;
         
-        # 前端应用 - 代理到开发服务器
+        # 更宽容的SSL配置
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers off;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        
+        # 开发环境SSL优化
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_verify_client off;
+        
+        # 增加HTTPS安全配置
+        ssl_buffer_size 8k;
+        ssl_ecdh_curve secp384r1;
+        ssl_stapling off;  # 开发环境可以关闭OCSP stapling
+        
+        # 静态文件服务 - 支持SPA路由
         location / {
-            proxy_pass http://localhost:8082;  # 前端开发服务器
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_cache_bypass $http_upgrade;
+            root /Users/patrick/Documents/应用开发/ocr-vue-app/frontend/dist;
+            index index.html;
+            try_files $uri $uri/ /index.html;  # 关键配置：支持HTML5 History模式路由
         }
         
         # 后端 API
