--- a/backend/package.json
+++ b/backend/package.json
@@ -5,22 +5,33 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "node start.js dev",
+    "prod": "node start.js prod",
+    "test": "node start.js test"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "file-type": "^20.5.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
-    "node-fetch": "^3.3.2"
+    "https-proxy-agent": "^7.0.6",
+    "node-fetch": "^3.3.2",
+    "proxy-agent": "^6.5.0",
+    "socks-proxy-agent": "^8.0.5"
   }
 }
