从sqlite换成了mongodb，并完成了数据迁移，并修改一些问题。

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,10 @@ backend/.env.*
 database/*.sqlite
 database/*.sqlite3
 database/*.sqlite-journal
+# MongoDB数据文件
+database/mongodb/data
+database/mongodb/mongod.conf
+database/mongodb/*.lock
 
 # SSL证书
 ssl/*.pem
