--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "dev": "node start.js dev",
     "prod": "node start.js prod",
-    "test": "node start.js test"
+    "test": "node start.js test",
+    "migrate": "node ../tools/migrate-to-mongodb.js",
+    "check-mongodb": "node ../tools/check-mongodb-config.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -17,12 +19,12 @@
     "express-session": "^1.18.1",
     "file-type": "^20.5.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^5.9.2",
+    "mongoose": "^7.8.7",
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
