修复了无法处理pdf的问题！

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -69,6 +69,12 @@ http {
             try_files $uri $uri/ /index.html;  # 关键配置：支持HTML5 History模式路由
         }
         
+        # PDF.js静态文件服务
+        location /pdf.js/ {
+            alias /Users/patrick/Documents/应用开发/ocr-vue-app/frontend/public/pdf.js/;
+            add_header Cache-Control "public, max-age=3600";
+        }
+        
         # 后端 API
         location /api/ {
             proxy_pass http://localhost:3000;  # 后端服务地址
@@ -112,6 +118,12 @@ http {
             root /Users/patrick/Documents/应用开发/ocr-vue-app/frontend/dist;
             index index.html;
             try_files $uri $uri/ /index.html;  # 关键配置：支持HTML5 History模式路由
+        }
+        
+        # PDF.js静态文件服务
+        location /pdf.js/ {
+            alias /Users/patrick/Documents/应用开发/ocr-vue-app/frontend/public/pdf.js/;
+            add_header Cache-Control "public, max-age=3600";
         }
         
         # 后端 API
