--- a/python-service/requirements.txt
+++ b/python-service/requirements.txt
@@ -1,3 +1,4 @@
+# 现有依赖
 albucore==0.0.24
 albumentations==2.0.6
 annotated-types==0.7.0
@@ -56,3 +57,8 @@ tzdata==2025.2
 urllib3==2.4.0
 Werkzeug==3.1.3
 zipp==3.21.0
+
+# 新增依赖
+gunicorn==20.1.0
+python-dotenv==1.0.0
+flask-limiter==3.5.0
