--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "normalize-data": "node ../tools/normalize-mongodb-data.js"
   },
   "dependencies": {
+    "@google-cloud/vision": "^5.1.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
@@ -30,13 +31,14 @@
     "passport-local": "^1.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
     "https-proxy-agent": "^7.0.6",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "proxy-agent": "^6.5.0",
     "socks-proxy-agent": "^8.0.5"
   }
