--- a/python-service/requirements-minimal.txt
+++ b/python-service/requirements-minimal.txt
@@ -19,3 +19,12 @@ huggingface-hub==0.23.1
 # 网络和数据处理
 requests==2.32.3
 PyYAML==6.0.2
+
+# 消息队列依赖
+pika==1.3.2
+
+# 数据库依赖
+pymongo==4.6.1
+
+# 日志处理
+colorlog==6.8.0
