拆分了一些组件

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,9 +2,9 @@
 user patrick staff;  # 使用patrick用户运行Nginx
 worker_processes 1;
 #error_log /var/log/nginx/error.log warn;  # 使用相对路径
-error_log logs/error.log;
+error_log logs/nginx/error.log;
 #pid /var/run/nginx.pid;  # 使用相对路径
-pid logs/nginx.pid;
+pid logs/nginx/nginx.pid;
 
 events {
     worker_connections 1024;
@@ -40,7 +40,7 @@ http {
                      '"$http_user_agent" "$http_x_forwarded_for"';
 
     #access_log /var/log/nginx/access.log main;  # 使用相对路径
-    access_log logs/access.log main;
+    access_log logs/nginx/access.log main;
 
     sendfile on;
     tcp_nopush on;
@@ -75,8 +75,8 @@ http {
         return 301 https://$host:8443$request_uri;
 
         # 日志配置
-        access_log logs/http_access.log main;
-        error_log logs/http_error.log;
+        access_log logs/nginx/http_access.log main;
+        error_log logs/nginx/http_error.log;
     }
 
     # HTTPS 服务器配置 (可选，开发环境可能不需要)
@@ -111,6 +111,15 @@ http {
         # add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://vision.googleapis.com https://storage.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob:; connect-src 'self' https://vision.googleapis.com; font-src 'self' https://fonts.gstatic.com; object-src 'none'; media-src 'self'; frame-src 'self'; worker-src 'self' blob:; form-action 'self'; base-uri 'self'; frame-ancestors 'self'" always;
         # add_header Referrer-Policy strict-origin-when-cross-origin always;
         # add_header Permissions-Policy "camera=(), microphone=(), geolocation=(), interest-cohort=()" always;
+
+        # 静态资源文件 - 不回退到index.html
+        location /assets/ {
+            root /Users/patrick/Documents/应用开发/ocr-vue-app/frontend/dist;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            # 对于assets目录下的文件，如果不存在就返回404，不要回退到index.html
+            try_files $uri =404;
+        }
 
         # 静态文件服务 - 支持SPA路由
         location / {
@@ -151,7 +160,7 @@ http {
 
         # Python服务代理
         location /api/python/ {
-            proxy_pass http://localhost:5000/;  # Python服务地址 - 改回5000端口，直接代理到根路径
+            proxy_pass http://localhost:5001/;  # Python服务地址 - 使用5001端口，直接代理到根路径
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -178,7 +187,7 @@ http {
 
         # Python服务上传文件访问 - 直接路径
         location /api/python/uploads/ {
-            proxy_pass http://localhost:5000/uploads/;
+            proxy_pass http://localhost:5001/uploads/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -193,7 +202,7 @@ http {
 
         # Python服务通过ID访问上传文件 - 新增路由
         location /api/python/uploads/by-id/ {
-            proxy_pass http://localhost:5000/uploads/by-id/;
+            proxy_pass http://localhost:5001/uploads/by-id/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -208,7 +217,7 @@ http {
 
         # 图片代理服务 - 新增路由
         location /api/python/images/ {
-            proxy_pass http://localhost:5000/images/;
+            proxy_pass http://localhost:5001/images/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -226,7 +235,7 @@ http {
 
         # Python服务临时文件访问 - 直接路径
         location /api/python/temp/ {
-            proxy_pass http://localhost:5000/temp/;
+            proxy_pass http://localhost:5001/temp/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -237,7 +246,7 @@ http {
 
         # Python服务结果文件访问 - 直接路径 (重定向到临时文件)
         location /api/python/results/ {
-            proxy_pass http://localhost:5000/results/;
+            proxy_pass http://localhost:5001/results/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -248,7 +257,7 @@ http {
 
         # Python服务裁剪文件访问 - 直接路径
         location /api/python/crops/ {
-            proxy_pass http://localhost:5000/crops/;
+            proxy_pass http://localhost:5001/crops/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -259,7 +268,7 @@ http {
 
         # Python服务下载文件访问 - 直接路径
         location /api/python/downloads/ {
-            proxy_pass http://localhost:5000/downloads/;
+            proxy_pass http://localhost:5001/downloads/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -270,7 +279,7 @@ http {
 
         # Python服务健康检查端点
         location /api/python/health {
-            proxy_pass http://localhost:5000/health;  # 改回5000端口，直接访问/health
+            proxy_pass http://localhost:5001/health;  # 使用5001端口，直接访问/health
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
