修复GitHub Actions部署问题：添加Cloud Build服务账号权限和前端端口配置

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,7 +87,8 @@ jobs:
             --allow-unauthenticated \
             --memory=512Mi \
             --cpu=1 \
-            --max-instances=10
+            --max-instances=10 \
+            --port=8080
 
   verify-deployment:
     name: Verify Deployment
