--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "start": "serve -s dist -l 8080",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
+    "@vitejs/plugin-vue": "^5.2.3",
     "autoprefixer": "^10.4.15",
     "daisyui": "^5.0.35",
     "heic-to": "^1.1.13",
@@ -21,20 +23,20 @@
     "marked": "^15.0.11",
     "pinia": "^3.0.1",
     "postcss": "^8.4.31",
+    "serve": "^14.2.3",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.2.4",
+    "vite-plugin-pwa": "^1.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "dotenv": "^16.5.0",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
-    "prettier": "3.5.3",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.2.4",
-    "vite-plugin-pwa": "^1.0.0"
+    "prettier": "3.5.3"
   }
 }
