--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ env:
   REGION: us-central1
   FRONTEND_SERVICE: textistext-frontend
   BACKEND_SERVICE: textistext-backend
+  PYTHON_SERVICE: textistext-python
 
 jobs:
   deploy-backend:
@@ -64,7 +65,7 @@ jobs:
       - name: Install frontend dependencies
         run: |
           cd frontend
-          npm ci
+          npm install
 
       - name: Build frontend
         run: |
@@ -90,10 +91,41 @@ jobs:
             --max-instances=10 \
             --port=8080
 
+  deploy-python:
+    name: Deploy Python Service
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ env.PROJECT_ID }}
+
+      - name: Deploy Python Service to Cloud Run
+        run: |
+          gcloud run deploy ${{ env.PYTHON_SERVICE }} \
+            --source=./python-service \
+            --region=${{ env.REGION }} \
+            --allow-unauthenticated \
+            --memory=2Gi \
+            --cpu=2 \
+            --max-instances=5 \
+            --port=8080 \
+            --timeout=600
+
   verify-deployment:
     name: Verify Deployment
     runs-on: ubuntu-latest
-    needs: [deploy-backend, deploy-frontend]
+    needs: [deploy-backend, deploy-frontend, deploy-python]
     if: github.ref == 'refs/heads/main'
 
     steps:
@@ -115,5 +147,9 @@ jobs:
           # 获取健康检查详情
           echo "Backend health check:"
           curl -s https://textistext.com/api/health || echo "Health check failed"
+
+          # 测试Python服务
+          echo "Testing Python service..."
+          curl -I https://textistext-python-82114549685.us-central1.run.app/health || echo "Python service test failed"
 
           echo "Deployment verification completed"
