重构: 完全移除RabbitMQ并优化项目结构
主要更改:
- 🗑️ 移除所有RabbitMQ相关代码和配置
- 🗑️ 删除未使用的analytics和monitoring控制器
- 🗑️ 清理过时的队列处理器和服务
- 🗑️ 移除TypeScript源码文件夹
- 🗑️ 删除训练相关文件和参考文件
- 🗑️ 清理nginx配置文件
- 📝 更新.gitignore忽略docs、scripts、cloud-run等文件夹
- 🐳 添加Python服务的Docker配置文件
- ⚙️ 简化环境配置和依赖管理
- 🔧 优化本地开发环境配置

架构简化:
- 直接API调用替代队列系统
- 统一使用Google Cloud Load Balancing
- 本地开发使用本地MongoDB，生产使用MongoDB Atlas
- 移除复杂的消息队列依赖

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,10 @@ python-service/logs/
 
 # windsurf rules
 .windsurfrules
+
+# 项目特定忽略文件夹和文件
+/backup/
+/docs/
+/scripts/
+/cloud-run/
+url-map-config.yaml
