--- a/python-service/requirements.txt
+++ b/python-service/requirements.txt
@@ -1,24 +1,16 @@
 # Web框架相关依赖
 Flask==2.3.3
 Flask-Cors==4.0.0
-flask-limiter==3.5.0
-Werkzeug==3.1.3
 gunicorn==20.1.0
 python-dotenv==1.0.0
 
-# OCR和图像处理依赖
-pytesseract==0.3.10
-pillow==10.2.0
-numpy==1.26.4
-opencv-python==4.11.0.86
-
-# 机器学习相关依赖
-torch==2.2.2
-huggingface-hub==0.23.1
-
-# 网络和数据处理
+# 基础依赖
 requests==2.32.3
 PyYAML==6.0.2
+
+# 图像处理依赖
+pillow==10.2.0
+numpy==1.26.4
 
 # 数据库依赖
 pymongo==4.6.1
