修复: Cloud Run部署问题
主要修复:
- 🔧 修改server.js监听地址为0.0.0.0，解决Cloud Run容器访问问题
- 🚀 优化package.json启动脚本，生产环境直接启动server.js
- 🌐 改进CORS配置，开发和生产环境分别优化
- 📦 确保Cloud Run能正确启动Node.js应用

技术细节:
- 监听地址从localhost改为0.0.0.0，兼容容器环境
- npm start命令设置NODE_ENV=production
- CORS配置根据环境自动选择合适的域名
- 保持开发环境完全兼容，无负面影响

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "dev": "node start.js dev",
     "prod": "node start.js prod",
     "test": "node start.js test",
